# edge-proxy

./: Cargo.toml
config/: default.yaml
src/: api.rs  app.rs  error.rs  lib.rs  logging.rs  main.rs  proxy.rs  routine.rs  settings.rs  signal.rs
src/proxy/: client.rs  config.rs  mod.rs  service.rs
test/: sample.yaml
